correção de validação, correção de layout e adiçao do ajax

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </nav>
             <div class="title">
                 <h1>Desenvolvedor</h1>
-                <small> Thinker // Designer</small>
+                <p> Thinker // Designer</p>
     
             </div>
 
